--- a/WpfApp3/RedeemTicket.xaml
+++ b/WpfApp3/RedeemTicket.xaml
@@ -18,16 +18,34 @@
                 <Border Background="#FFF" CornerRadius="10" Height="50px" Margin="30,5,29.6,0">
                     <TextBox  Height="28" BorderThickness="0,0,0,0" BorderBrush="White" FontSize="20" Padding="0" Background="Transparent" Foreground="#000" Margin="10,0,0,0"  x:Name="CodeTB"/>
                 </Border>
-                <Button Content="Redeem" Height="49" Margin="150,30,120,0" BorderThickness="1" BorderBrush="#FFF" Foreground="#FFF" Background="#FF1C54C2" FontSize="18" Click="goRedeem"/>
+                <Button Content="Redeem" Height="49" Margin="150,30,120,0" BorderThickness="1" BorderBrush="#FFF" Foreground="#FFF" Background="#FF1C54C2" FontSize="18" Click="Button_Click_4"/>
                 <TextBlock  Height="28" Text="                                  Or : " FontSize="20" Padding="0" Background="Transparent" Foreground="#FFF" Margin="30, 30,-0.4,0" />
                 <Button Content="Scan code" Height="49" Margin="150,30,120,0" BorderThickness="1" BorderBrush="#FFF" Foreground="#FFF" Background="#FF1C54C2" FontSize="18"/>
             </StackPanel>
         </Border>
 
         <StackPanel  x:Name="SP3" Background="#FF1C54C2" Height="45" Width="450" HorizontalAlignment="Stretch" VerticalAlignment="top" Margin="0,62,-0.4,0" MouseDown="ActiveTicketDown">
-            <TextBlock Text="1 Active Ticket" FontSize="15px" FontWeight="Bold" FontFamily="Microsoft JhengHei" Foreground="#FFF"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0"/>
+            <TextBlock Name="atTextBox" Text="0 Active Ticket" FontSize="15px" FontWeight="Bold" FontFamily="Microsoft JhengHei" Foreground="#FFF"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0"/>
             <TextBlock x:Name="TBPress" Text="Press here to see more details" FontSize="10px" FontFamily="Microsoft JhengHei" Foreground="#FFF"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,0,0,0"/>
-            <Button Content="Open Wallet" Height="30px" Width="100px" Margin="0,400,0,0" BorderThickness="1" BorderBrush="#FFF" Foreground="#FFF" Background="#FF1C54C2"/>
+            <Border Background="White" Height="80" Width="420" Margin="5,20,5,361.667" CornerRadius="25" Name="firstTicket" Visibility="Hidden">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Ticket Title" Foreground="#FF1861F1" FontSize="15px" FontWeight="Bold" Margin="40,15,0,0"/>
+                        <TextBlock Text="Activated"  FontSize="15px" FontWeight="Bold" Margin="190,15,0,0" Background="White" Foreground="#FF1C54C2" Padding="5"/>
+                    </StackPanel>
+                    <TextBlock Text="Expires In: 35 mins" Foreground="#FF1861F1" FontSize="12px" FontWeight="Bold" Margin="40,10,0,0"/>
+                </StackPanel>
+            </Border>
+            <Border Background="White" Height="80" Width="420" Margin="5,-310,5,361.667" CornerRadius="25" Name="secondTicket" Visibility="Hidden">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Ticket Title" Foreground="#FF1861F1" FontSize="15px" FontWeight="Bold" Margin="40,15,0,0"/>
+                        <TextBlock Text="Activated"  FontSize="15px" FontWeight="Bold" Margin="190,15,0,0" Background="White" Foreground="#FF1C54C2" Padding="5"/>
+                    </StackPanel>
+                    <TextBlock Text="Expires In: 35 mins" Foreground="#FF1861F1" FontSize="12px" FontWeight="Bold" Margin="40,10,0,0"/>
+                </StackPanel>
+            </Border>
+            <Button Content="Open Wallet" Height="30px" Width="100px" Margin="0,-350,0,0" BorderThickness="1" BorderBrush="#FFF" Foreground="#FFF" Background="#FF1C54C2" Click="Button_Click_5"/>
         </StackPanel>
 
     </Grid>
