--- a/WpfApp3/WalletPage.xaml
+++ b/WpfApp3/WalletPage.xaml
@@ -11,20 +11,12 @@
     <Grid Background="#FF1861F1">
 
         <StackPanel Name="sp1">
-        <Border Background="White" Height="80" Width="420" Margin="5,150,5,361.667" CornerRadius="25">
-            <StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Ticket Title" Foreground="#FF1861F1" FontSize="15px" FontWeight="Bold" Margin="40,15,0,0"/>
-                    <TextBlock Text="Activated"  FontSize="15px" FontWeight="Bold" Margin="190,15,0,0" Background="White" Foreground="#FF1C54C2" Padding="5"/>
-                </StackPanel>
-                <TextBlock Text="Expires In: 35 mins" Foreground="#FF1861F1" FontSize="12px" FontWeight="Bold" Margin="40,10,0,0"/>
-            </StackPanel>
-        </Border>
-            <Border Background="#FF1C54C2" Height="80" Width="420" Margin="5,-600,5,0" CornerRadius="25">
+
+            <Border Background="#FF1C54C2" Height="80" Width="420" Margin="5,150,5,0" CornerRadius="25"  Name="ticket1">
                 <StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Ticket Title" Foreground="#FFF" FontSize="15px" FontWeight="Bold" Margin="40,15,0,0"/>
-                        <Button Content="Activate" Width="80" Height="30" Margin="190,15,0,0" Background="#FF1C54C2" Foreground="White" BorderBrush="White" Padding="5"/>
+                        <TextBlock x:Name="ticTitle" Text="Ticket Title" Foreground="#FFF" FontSize="15px" FontWeight="Bold" Margin="40,15,0,0"/>
+                        <Button x:Name="btnAct" Content="Activate" Width="80" Height="30" Margin="190,15,0,0" Background="#FF1C54C2" Foreground="White" BorderBrush="White" Padding="5" Click="Act"/>
                     </StackPanel>
                     <TextBlock Text="Expires In: 1 day" Foreground="#FFF" FontSize="12px" FontWeight="Bold" Margin="40,10,0,0"/>
                 </StackPanel>
@@ -45,9 +37,27 @@
 
 
         <StackPanel  x:Name="SP3" Background="#FF1C54C2" Height="45" Width="450" HorizontalAlignment="Stretch" VerticalAlignment="top" Margin="0,50,0,0" MouseDown="ActiveTicketDown">
-            <TextBlock Text="1 Active Ticket" FontSize="15px" FontWeight="Bold" FontFamily="Microsoft JhengHei" Foreground="#FFF"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0"/>
+            <TextBlock Name="atTextBox" FontSize="15px" FontWeight="Bold" FontFamily="Microsoft JhengHei" Foreground="#FFF"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0"><Run Text="0"/><Run Text=" Active Ticket"/></TextBlock>
             <TextBlock x:Name="TBPress" Text="Press here to see more details" FontSize="10px" FontFamily="Microsoft JhengHei" Foreground="#FFF"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,0,0,0"/>
-            <Button Content="Open Wallet" Height="30px" Width="100px" Margin="0,400,0,0" BorderThickness="1" BorderBrush="#FFF" Foreground="#FFF" Background="#FF1C54C2"/>
+            <Border Background="White" Height="80" Width="420" Margin="5,20,5,361.667" CornerRadius="25" Name="firstTicket" Visibility="Hidden">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Ticket Title" Foreground="#FF1861F1" FontSize="15px" FontWeight="Bold" Margin="40,15,0,0"/>
+                        <TextBlock Text="Activated"  FontSize="15px" FontWeight="Bold" Margin="190,15,0,0" Background="White" Foreground="#FF1C54C2" Padding="5"/>
+                    </StackPanel>
+                    <TextBlock Text="Expires In: 35 mins" Foreground="#FF1861F1" FontSize="12px" FontWeight="Bold" Margin="40,10,0,0"/>
+                </StackPanel>
+            </Border>
+            <Border Background="White" Height="80" Width="420" Margin="5,-310,5,361.667" CornerRadius="25" Name="secondTicket" Visibility="Hidden">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Ticket Title" Foreground="#FF1861F1" FontSize="15px" FontWeight="Bold" Margin="40,15,0,0"/>
+                        <TextBlock Text="Activated"  FontSize="15px" FontWeight="Bold" Margin="190,15,0,0" Background="White" Foreground="#FF1C54C2" Padding="5"/>
+                    </StackPanel>
+                    <TextBlock Text="Expires In: 35 mins" Foreground="#FF1861F1" FontSize="12px" FontWeight="Bold" Margin="40,10,0,0"/>
+                </StackPanel>
+            </Border>
+            <Button Content="Open Wallet" Height="30px" Width="100px" Margin="0,-350,0,0" BorderThickness="1" BorderBrush="#FFF" Foreground="#FFF" Background="#FF1C54C2"/>
         </StackPanel>
 
 
